Events WIP and estimateFee proxy-method
