# docs/swagger.json
@@ -198,6 +198,13 @@
                         "name": "address",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "default": true,
+                        "description": "Use method from api/v2. Not recommended",
+                        "name": "use_v2",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -348,7 +355,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -381,6 +388,55 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/BlocksResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/RequestError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v3/estimateFee": {
+            "post": {
+                "security": [
+                    {
+                        "APIKeyHeader": []
+                    },
+                    {
+                        "APIKeyQuery": []
+                    }
+                ],
+                "description": "Estimate fees required for query processing. Fields body, init-code and init-data accepted in serialized format (b64-encoded).",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api/v2"
+                ],
+                "summary": "Estimate Fee",
+                "operationId": "api_v3_post_v2_estimate_fee",
+                "parameters": [
+                    {
+                        "description": "Estimate fee request.",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/index.V2EstimateFeeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/V2EstimateFeeResult"
                         }
                     },
                     "400": {
@@ -432,6 +488,16 @@
                         "in": "query"
                     },
                     {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "multi",
+                        "description": "Find event by message hash.",
+                        "name": "msg_hash",
+                        "in": "query"
+                    },
+                    {
                         "minimum": 0,
                         "type": "integer",
                         "description": "Query events, which was finished **after** given timestamp.",
@@ -460,7 +526,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -582,7 +648,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -670,7 +736,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -791,7 +857,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -1123,7 +1189,11 @@
                 "operationId": "api_v3_get_messages",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "multi",
                         "description": "Message hash. Acceptable in hex, base64 and base64url forms.",
                         "name": "msg_hash",
                         "in": "query"
@@ -1163,7 +1233,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -1240,7 +1310,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -1454,7 +1524,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -1571,7 +1641,7 @@
                 "operationId": "api_v3_get_top_accounts_by_balance",
                 "parameters": [
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -1715,7 +1785,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -1790,7 +1860,7 @@
                         "required": true
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -1886,7 +1956,7 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
+                        "maximum": 1000,
                         "minimum": 1,
                         "type": "integer",
                         "default": 10,
@@ -1929,7 +1999,7 @@
                         "APIKeyQuery": []
                     }
                 ],
-                "description": "Get wallet smart contract information. The following wallets are supported: `v1r1`, `v1r2`, `v1r3`, `v2r1`, `v2r2`, `v3r1`, `v3r2`, `v4r1`, `v4r2`. In case the account is not a wallet error code 409 is returned.",
+                "description": "Get wallet smart contract information. The following wallets are supported: `v1r1`, `v1r2`, `v1r3`, `v2r1`, `v2r2`, `v3r1`, `v3r2`, `v4r1`, `v4r2`, `v5beta`, `v5r1`. In case the account is not a wallet error code 409 is returned.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1948,6 +2018,13 @@
                         "name": "address",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "default": true,
+                        "description": "Use method from api/v2. Not recommended",
+                        "name": "use_v2",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1955,6 +2032,57 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/V2WalletInformation"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/RequestError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v3/walletStates": {
+            "get": {
+                "security": [
+                    {
+                        "APIKeyHeader": []
+                    },
+                    {
+                        "APIKeyQuery": []
+                    }
+                ],
+                "description": "Query wallet information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Get Wallet States",
+                "operationId": "api_v3_get_wallet_states",
+                "parameters": [
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "multi",
+                        "description": "List of addresses in any form to get address book. Max: 1024.",
+                        "name": "address",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/WalletStatesResponse"
                         }
                     },
                     "400": {
@@ -2014,9 +2142,6 @@
                 "account_state_hash": {
                     "type": "string"
                 },
-                "account_status": {
-                    "type": "string"
-                },
                 "address": {
                     "type": "string"
                 },
@@ -2044,6 +2169,9 @@
                 "last_transaction_lt": {
                     "type": "string",
                     "example": "0"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
@@ -2480,11 +2608,84 @@
                 }
             }
         },
+        "Event": {
+            "type": "object",
+            "properties": {
+                "actions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Action"
+                    }
+                },
+                "end_lt": {
+                    "type": "integer"
+                },
+                "end_utime": {
+                    "type": "integer"
+                },
+                "external_hash": {
+                    "type": "string"
+                },
+                "is_incomplete": {
+                    "type": "boolean"
+                },
+                "mc_seqno_end": {
+                    "type": "string"
+                },
+                "mc_seqno_start": {
+                    "type": "string"
+                },
+                "start_lt": {
+                    "type": "integer"
+                },
+                "start_utime": {
+                    "type": "integer"
+                },
+                "trace_id": {
+                    "type": "string"
+                },
+                "trace_info": {
+                    "$ref": "#/definitions/EventMeta"
+                },
+                "transactions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Transaction"
+                    }
+                }
+            }
+        },
+        "EventMeta": {
+            "type": "object",
+            "properties": {
+                "classification_state": {
+                    "type": "string"
+                },
+                "messages": {
+                    "type": "integer"
+                },
+                "pending_messages": {
+                    "type": "integer"
+                },
+                "trace_state": {
+                    "type": "string"
+                },
+                "transactions": {
+                    "type": "integer"
+                }
+            }
+        },
         "EventsResponse": {
             "type": "object",
             "properties": {
                 "address_book": {
                     "$ref": "#/definitions/AddressBook"
+                },
+                "events": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Event"
+                    }
                 }
             }
         },
@@ -3145,6 +3346,37 @@
                 }
             }
         },
+        "V2EstimateFeeResult": {
+            "type": "object",
+            "properties": {
+                "destination_fees": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/V2EstimatedFee"
+                    }
+                },
+                "source_fees": {
+                    "$ref": "#/definitions/V2EstimatedFee"
+                }
+            }
+        },
+        "V2EstimatedFee": {
+            "type": "object",
+            "properties": {
+                "fwd_fee": {
+                    "type": "integer"
+                },
+                "gas_fee": {
+                    "type": "integer"
+                },
+                "in_fwd_fee": {
+                    "type": "integer"
+                },
+                "storage_fee": {
+                    "type": "integer"
+                }
+            }
+        },
         "V2SendMessageResult": {
             "type": "object",
             "properties": {
@@ -3184,6 +3416,79 @@
                     "type": "integer"
                 },
                 "wallet_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "WalletState": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "balance": {
+                    "type": "string"
+                },
+                "code_hash": {
+                    "type": "string"
+                },
+                "is_signature_allowed": {
+                    "type": "boolean"
+                },
+                "is_wallet": {
+                    "type": "boolean"
+                },
+                "last_transaction_hash": {
+                    "type": "string"
+                },
+                "last_transaction_lt": {
+                    "type": "string",
+                    "example": "0"
+                },
+                "seqno": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "wallet_id": {
+                    "type": "integer"
+                },
+                "wallet_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "WalletStatesResponse": {
+            "type": "object",
+            "properties": {
+                "address_book": {
+                    "$ref": "#/definitions/AddressBook"
+                },
+                "wallets": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/WalletState"
+                    }
+                }
+            }
+        },
+        "index.V2EstimateFeeRequest": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "body": {
+                    "type": "string"
+                },
+                "ignore_chksig": {
+                    "type": "boolean"
+                },
+                "init_code": {
+                    "type": "string"
+                },
+                "init_data": {
                     "type": "string"
                 }
             }
